# nyasynth

./: .gitignore  CREDITS.txt  Cargo.toml  Justfile  README.md  filter_tests.txt  findings.txt  osx_bundler.sh  run.sh  vplayer.sh
affinity_photo/: brushed_metal.afphoto  metal_knob.afphoto
assets/: brushed_metal.afphoto  metal_knob.afphoto
assets/spine_json/: Spine.json
src/: chorus.rs  common.rs  ease.rs  interpolation.txt  keys.rs  lib.rs  macros.rs  neighbor_pairs.rs  params.rs  presets.rs  sound_gen.rs  ui.rs  ui_knob.rs  ui_tabs.rs
xtask/: Cargo.toml
