[package]
name = "nyasynth"
version = "0.1.0"
authors = ["Aaron Kofsky <aaronko@umich.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Repo pinned to https://github.com/a2aaron/nih-plug/commit/4e98cf6c49060e95f27d0c9d8958921746633469
# This forked version is needed to expose some of nih-plug's internals, specifically so that perf.rs
# can implement a minimal host.
nih_plug = { git = "https://github.com/a2aaron/nih-plug.git", rev = "4e98cf6c49060e95f27d0c9d8958921746633469", features = ["vst3", "standalone"]}
# nih_plug = { path = "../nih-plug", features = ["vst3", "standalone"]}
derive_more = "0.99"
biquad = "0.4.0"
ordered-float = "3.4.0"

# for preset stuff
midly = "0.5.3"
wav = "1.0.0"
clap = { version = "4.1.8", features = ["derive"] }
getrandom = "0.2.8"
packed_simd_2 = "0.3.8"


[profile.release]
incremental = true
debug = true

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
members = ["xtask"]
