[package]
name = "nyasynth"
version = "0.1.0"
authors = ["Aaron Kofsky <aaronko@umich.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Repo pinned to https://github.com/a2aaron/nih-plug/commit/2ecc194e461de1bdbc117d86449b2fb30fafb356
# This forked version is needed to expose some of nih-plug's internals, specifically so that perf.rs
# can implement a minimal host. Additionally, this adds a method to ProcessContext to allow peeking
# of events.
nih_plug = { git = "https://github.com/a2aaron/nih-plug.git", rev = "2ecc194e461de1bdbc117d86449b2fb30fafb356", features = ["vst3", "standalone"]}
nih_plug_egui = { git = "https://github.com/a2aaron/nih-plug.git", rev = "2ecc194e461de1bdbc117d86449b2fb30fafb356" }
# nih_plug = { path = "../nih-plug", features = ["vst3", "standalone"]}
derive_more = "0.99"
biquad = "0.4.0"
ordered-float = "3.4.0"
getrandom = "0.2.8"
atomic_float = "0.1.0"
once_cell = "1.17.1"
image = { version = "0.24.5", default-features = false, features = ["png"] }

# perf.rs dependencies
midly = "0.5.3"
wav = "1.0.0"
clap = { version = "4.1.8", features = ["derive"] }
serde_json = "1.0.94"
serde = "1.0.156"

[profile.release]
incremental = true
lto = true

[lib]
crate-type = ["cdylib", "lib"]

[workspace]
members = ["xtask"]
